Fix radio buttons not showing up in FF and IE... hopefully

--- a/src/sass/_contest.scss
+++ b/src/sass/_contest.scss
@@ -195,7 +195,7 @@
     align-items: center;
     input {
         margin-right: 9px;
-        visibility: hidden;
+        // visibility: hidden;
         margin-left: 20px;
         cursor: pointer;
         &:first-child {
